--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/RocketChat/Rocket.Chat.Electron.git"
+    "url": "git+https://github.com/Rodeo-Dental/Rocket.Chat.Electron.git"
   },
   "bugs": {
-    "url": "https://github.com/RocketChat/Rocket.Chat.Electron/issues"
+    "url": "https://github.com/Rodeo-Dental/Rocket.Chat.Electron/issues"
   },
   "main": "app/main.js",
   "scripts": {
