initial run, testing action automated build. -- isolating macOS -- testing CI/CD

--- a/dev-app-update.yml
+++ b/dev-app-update.yml
@@ -2,3 +2,4 @@ owner: Rodeo-Dental
 repo: Rocket.Chat.Electron
 provider: github
 vPrefixedTagName: false
+token: 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
