--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "workspaces": [
     "workspaces/*"
   ],
-  "name": "ROX Chat",
+  "name": "ROXChat",
   "description": "Official OSX, Windows, and Linux Desktop Clients for ROX Chat",
-  "version": "0.3.5.6",
+  "version": "0.3.5.6-alpha.01",
   "author": "ROXLABS Support <creativetech@rodeodental.com>",
   "copyright": "© 2021, Irving Valley Management Services LLC",
   "homepage": "https://mix.rodoedental.com/rox-chat",
