--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -48,6 +48,7 @@ jobs:
           mac_csc_key_password: ${{ secrets.MAC_CSC_KEY_PASSWORD }}
           mac_apple_id: ${{ secrets.APPLEID }}
           mac_apple_id_password: ${{ secrets.APPLEIDPASS }}
+          mac_asc_provider: '5J497Z83T9'
           win_csc_link: ${{ secrets.WIN_CSC_LINK }}
           win_csc_key_password: ${{ secrets.WIN_CSC_KEY_PASSWORD }}
           github_token: ${{ secrets.GH_TOKEN }}
