initial run, testing action automated build. -- isolating macOS -- testing CI/CD -- fixed package name

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "homepage": "https://mix.rodoedental.com/rox-chat",
   "license": "MIT",
   "keywords": [
-    "ROX Chat"
+    "ROX Chat Desktop"
   ],
   "repository": {
     "type": "git",
