--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "workspaces/*"
   ],
   "name": "ROXChat",
-  "description": "Official OSX, Windows, and Linux Desktop Clients for ROX Chat",
+  "description": "Official OSX, Windows, and Linux Desktop Clients for ROX Chat Desktop",
   "version": "3.5.6-alpha.1",
   "author": "ROXLABS Support <creativetech@rodeodental.com>",
   "copyright": "© 2021, Irving Valley Management Services LLC",
