--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "name": "ROXChat",
   "description": "Official OSX, Windows, and Linux Desktop Clients for ROX Chat Desktop",
   "version": "3.5.6-alpha.1",
-  "author": "ROXLABS Support <creativetech@rodeodental.com>",
+  "author": "ROXLABS <creativetech@rodeodental.com>",
   "copyright": "© 2021, Irving Valley Management Services LLC",
   "homepage": "https://mix.rodoedental.com/rox-chat",
   "license": "MIT",
