--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "workspaces": [
     "workspaces/*"
   ],
-  "name": "ROXChat",
-  "description": "Official OSX, Windows, and Linux Desktop Clients for ROX Chat Desktop",
+  "name": "roxchat",
+  "description": "Official OSX, Windows, and Linux Desktop Clients for ROX Chat",
   "version": "3.5.6-alpha.1",
-  "author": "ROXLABS <creativetech@rodeodental.com>",
+  "author": "ROXLABS Support <creativetech@rodeodental.com>",
   "copyright": "© 2021, Irving Valley Management Services LLC",
   "homepage": "https://mix.rodoedental.com/rox-chat",
   "license": "MIT",
@@ -28,7 +28,7 @@
     "build": "run-p .:build:rollup .:build:workspaces",
     ".:build:rollup": "rollup -c",
     ".:build:workspaces": "yarn workspaces run build",
-    "release": "yarn electron-builder --publish never --x64",
+    "release": "yarn electron-builder --publish onTagOrDraft --x64",
     "build:watch": "rollup -c -w",
     "install-app-deps": "electron-builder install-app-deps",
     "test": "xvfb-maybe jest",
@@ -125,5 +125,5 @@
     "node": ">=12.8.x",
     "yarn": ">=1.22.x"
   },
-  "productName": "ROX Chat"
+  "productName": "ROXChat"
 }
