--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "build": "run-p .:build:rollup .:build:workspaces",
     ".:build:rollup": "rollup -c",
     ".:build:workspaces": "yarn workspaces run build",
-    "release": "yarn electron-builder --publish never --x64",
+    "release": "yarn electron-builder --publish onTagOrDraft --x64",
     "build:watch": "rollup -c -w",
     "install-app-deps": "electron-builder install-app-deps",
     "test": "xvfb-maybe jest",
