Updated electron-builder.json to sign windows app

--- a/workspaces/desktop-release-action/action.yml
+++ b/workspaces/desktop-release-action/action.yml
@@ -28,10 +28,10 @@ inputs:
     required: false
   win_csc_link:
     description: 'The base64-encoded data of certificates (*.p12) for code signing for Windows'
-    required: false
+    required: true
   win_csc_key_password:
     description: 'The password to decrypt the certificates for code signing for Windows'
-    required: false
+    required: true
   github_token:
     description: 'The GitHub token to publish releases'
     required: false
